--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd-mobile": "^2.2.9",
     "axios": "^0.18.0",
     "react": "^16.8.4",
+    "react-avatar-editor": "^11.0.6",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
